1999-08-04  root  <guiheneu@jean.joudboeuf.fr>


1999-08-04  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/gmime-rfc2047.c: 
	* camel/gmime-rfc2047.h:
	indentation and cosmetic changes.
	
	* camel/providers/MH/camel-mh-folder.c (_list_subfolders): 
	implemented.
	* camel/providers/MH/camel-mh-folder.c (_delete): 
	finshed implementation
	(_delete_messages): implemented.


1999-08-04  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* camel/gmime-rfc2047.[ch]: added an implemention of RFC2047
	  (support for character sets other than US-ASCII in MIME
	  headers). Not actually called from anywhere yet.


1999-08-03  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/MH/camel-mh-folder.c (_create): 
	implemented.
	(_delete): started implementation.

	* camel/camel-folder.c (_get_folder): default implementation 
	calls camel_store_get_folder ().

	* camel/providers/MH/camel-mh-folder.c (_init_with_store): 
	implemented.

	* camel/camel-folder.h (struct _CamelFolder): 
	remove useless exist_on_store field.

	* camel/camel-folder.c (_exists): 
	do not use exist_on_store field.

	* camel/camel-folder.c (camel_folder_set_name): 
	(camel_folder_get_name): 
	new public functions 
	(_set_name): set full_path.

	(_set_full_name): 
	(camel_folder_set_full_name): 
	commented out this functions def. 
	It would make things very difficult to handle, and would not 
	be very useful. 
	
	* camel/providers/MH/camel-mh-store.h: 
	* camel/providers/MH/camel-mh-store.c (camel_mh_store_set_toplevel_dir): 
	(camel_mh_store_get_toplevel_dir): 
	* camel/providers/MH/camel-mh-folder.c (_set_name): 
	* camel/providers/MH/camel-mh-folder.h: 
	use (gchar *) instead of (GString *) everywhere.
	use const when necessary.
	
	* camel/camel-folder.h (struct _CamelFolder): 
	removed unused message_list field.
	
	* camel/camel-mime-part.c (_set_content_object): 
	There is a probleme here. We can not allow mime part
	content-type field and content_object mime-type to be 