@@ -1,0 +1,19 @@
+Note to hackers
+---------------
+
+When hacking on camel (and on the gnome mailer in general), 
+be sure to follow the same coding style as the intial authors.
+Please read the file HACKING in gnumeric and follow the
+general guidelines explained in it.
+
+Please take a look at camel source files and try to 
+imitate the coding style the best possible. We are perfectly
+aware that this is not the best and unique style, but it 
+is absolutely mandatory that Camel is homogeneous. 
+If you find the current coding style to have some weaknesses, 
+please contact the authors to discuss this matter.
+
+Thanks.
+
+	Bertrand.
+
