@@ -1,0 +1,47 @@
+Important note for Camel hackers:
+---------------------------------
+
+Camel has been a lot of work, and has been conceived to be general
+enough to be used outside the gnome-mailer. It is possible in the
+future that it is used in softwares with licenses incompatible with the
+LGPL. For this reason, the copyright has to be owned by a unique
+person.  Be sure, however, that Camel will always be available under
+the LGPL.  Significant authors will always be consulted before any
+special use of Camel. Moreover, in special situations, they may be
+given the authorization to use Camel with a license different than the
+LGPL.
+
+Thus, when adding code in Camel, always add the following lines at the
+begining of the file:
+
+/* 
+ *
+ * Copyright (C) 1999 Bertrand Guiheneuf <Bertrand.Guiheneuf@aful.org> .
+ *
+ * This program is free software; you can redistribute it and/or 
+ * modify it under the terms of the GNU General Public License as 
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * USA
+ */
+
+You may also want to add your name to the author name list after this
+header.
+
+Please contact me (Bertrand.Guiheneuf@aful.org) if you want to discuss
+this copyright issue.
+
+Happy hacking,
+
+Bertrand.
+
+
