@@ -1,0 +1,14 @@
+You want to hack on Camel ?
+
+Thanks. Camel aims at being the best messaging
+library for Linux and your help is welcome. 
+Please be sure to read the following files before
+commiting any change or sending any patch:
+
+CODING.STYLE
+README.COPYRIGHT
+
+
+Thanks.
+
+	Bertrand <Bertrand.Guiheneuf@inria.fr>
